@@ -166,6 +166,7 @@
 - PEAR::Net_Useragent_Detect module was renamed to pear_net_useragent_detect.php and moved to p4a/libraries/ directory
 - P4A_Mkdir_Recursive() global function was added to P4A standard library
 - All System::mkdir calls were changed to use the new P4A_Mkdir_Recursive() function
+- a bunch of unuseful referenced were removed from core helpers
 
 2.2.4
 - rules to generate P4A_THEME_DIR and P4A_ICONS_DIR were changed
